fix: white space under main's bg when logs are filled

--- a/angular-slayer/src/app/app.component.css
+++ b/angular-slayer/src/app/app.component.css
@@ -1,6 +1,6 @@
 main {
     padding-top: 20vh;
-    height: 100vh;
+    height: 120vh;
 }
 
 .bossInterface {
